// Original file: node_modules/soum-proto/proto/ler.proto

export interface MapLogisticsServicesRequest {
  sellerCityTier?: number;
  buyerCityTier?: number;
  isKeySeller?: boolean;
}

export interface MapLogisticsServicesRequest__Output {
  sellerCityTier: number;
  buyerCityTier: number;
  isKeySeller: boolean;
}
