// Original file: node_modules/soum-proto/proto/ler.proto

export interface MapLogisticsServicesResponse {
  logisticServices?: string;
  vendorId?: string;
  isAvailableToPickup?: boolean;
  serviceId?: string;
  isAvailableToOneService?: boolean;
}

export interface MapLogisticsServicesResponse__Output {
  logisticServices: string;
  vendorId: string;
  isAvailableToPickup: boolean;
  serviceId: string;
  isAvailableToOneService: boolean;
}
